[package]
name = "millegrilles_common_rust"
version = "2025.3.1"
edition = "2021"

[dependencies]

millegrilles_cryptographie = { git = "https://github.com/dugrema/millegrilles_cryptographie.git", tag = "2025.2-release", features = ["chiffrage"] }
# millegrilles_cryptographie = { git = "https://github.com/dugrema/millegrilles_cryptographie.git", branch = "master", features = ["chiffrage"] }
# millegrilles_cryptographie = { path = "/home/mathieu/RustroverProjects/millegrilles_cryptographie", features = ["chiffrage"] }

async-std = "1.12"
async-tar = { version = "0.4" }
bytes = { version = "1.6" }
log = { version = "0.4"}
env_logger = { version = "0.11" }
num-traits = "0.2"
rand = "0.8"
reqwest = { version = "0.12", features = ["default-tls", "native-tls", "rustls-tls", "rustls-tls-manual-roots", "json", "multipart", "stream", "socks", "cookies"] }
tempfile = { version = "3.10" }
flate2 = "1.0"
xz2 = { version = "0.1", features = ["tokio"] }
hex = "0.4"
async-compression = { version = "0.4", features = ["tokio", "all-algorithms"] }
fs2 = "0.4.3"

# Tokio, async
async-recursion = "1.1"
async-trait = "0.1"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["codec", "io"] }
static_cell = "2.1"

# Crypto et certs
openssl = { version = "0.10", features = ["vendored"] }
x509-parser = { "version" = "0.16" }
multibase = "0.9"
multicodec = "0.1"
multihash = "0.15"
base64 = "0.22"
base64-url = "2.0"
blake2 = "0.10"
chacha20poly1305 = "0.10"
dryoc = { version = "0.5" }
#dryoc = { version = "0.4" }
zeroize = { version = "1.7", default-features = false }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-helpers = { version = "0.1", features = ["serde_json"] }

# Formats
chrono = { version = "0.4", features = ["serde", "alloc"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
substring = { version = "1.4" }

# MongoDB
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"] }

# RabbitMQ
lapin = { "version" = "2.3" }
futures = "0.3"
futures-util = "0.3.16"
tokio-amqp = { version = "2.0" }

redis = { version = "0.25", features = ["tokio-comp", "tokio-native-tls-comp"] }
# jwt = { version = "0.16.0", features = ["openssl"] }
jwt-simple = "0.11"


#[dev-dependencies]
