[package]
name = "millegrilles_common_rust"
version = "2026.0.1"
edition = "2021"

[dependencies]

# Cryptography module
millegrilles_cryptographie = { git = "https://github.com/dugrema/millegrilles_cryptographie.git", tag = "2026.0-release", features = ["chiffrage"] }
# millegrilles_cryptographie = { git = "https://github.com/dugrema/millegrilles_cryptographie.git", branch = "master", features = ["chiffrage"] }

# Asynchronous utilities
async-std = "1.12"
async-tar = { version = "0.5" }
bytes = { version = "1.6" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
num-traits = "0.2"
rand = "0.9.2"
reqwest = { version = "0.12", features = ["default-tls", "native-tls", "rustls-tls", "rustls-tls-manual-roots", "json", "multipart", "stream", "socks", "cookies"] }
tempfile = { version = "3.10" }
flate2 = { version = "1.0" }
xz2 = { version = "0.1", features = ["tokio"] }
hex = { version = "0.4" }
async-compression = { version = "0.4", features = ["tokio", "all-algorithms"] }
fs2 = { version = "0.4.3" }

# Tokio and async primitives
async-trait = { version = "0.1" }
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["codec", "io"] }
static_cell = { version = "2.1" }

# Crypto & certificate handling
openssl = { version = "0.10", features = ["vendored"] }
x509-parser = { version = "0.18.0" }
multibase = { version = "0.9" }
multicodec = { version = "0.1" }
multihash = { version = "0.15" }
base64 = { version = "0.22" }
base64-url = { version = "3.0.0" }
blake2 = { version = "0.10" }
chacha20poly1305 = { version = "0.10" }
dryoc = { version = "0.7.2" }
zeroize = { version = "1.8.1", default-features = false }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-helpers = { version = "0.1", features = ["serde_json"] }

# Common formats
chrono = { version = "0.4", features = ["serde", "alloc"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
substring = { version = "1.4" }

# MongoDB
mongodb = { version = "2.8.2", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"] }

# RabbitMQ
lapin = { version = "2.5" }
futures = { version = "0.3" }
futures-util = { version = "0.3.16" }
tokio-amqp = { version = "2.0" }

redis = { version = "0.25.4", features = ["tokio-comp", "tokio-native-tls-comp"] }
# jwt = { version = "0.16.0", features = ["openssl"] }
jwt-simple = "0.11.9"

# (dev-dependencies are currently empty)
#[dev-dependencies]
